add refactor dict, change for StepExecutionListener